--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chia-client",
+  "name": "chaingreen-client-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
@@ -19,13 +19,13 @@
     "jet-logger": "^1.0.6",
     "mongoose": "^5.13.2",
     "nodemon": "^2.0.9",
-    "tsc": "^2.0.3"
+    "tsc": "^2.0.3",
+    "typescript": "^4.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "ts-node": "^10.0.0"
   }
 }
