--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "devServer": "nodemon ./src/index.ts",
-    "start":"ts-node dist/index.js",
+    "start": "node dist/index.js",
     "build": "tsc --p ./"
   },
   "nodemonConfig": {
@@ -17,8 +17,10 @@
   "author": "Valeri Dobrev",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/node": "^16.3.3",
     "chia-client": "git+https://github.com/martin-key/chia-client#master",
+    "cors": "^2.8.5",
     "jet-logger": "^1.0.6",
     "mongoose": "^5.13.2",
     "nodemon": "^2.0.9",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "chia-utils": "^1.0.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "ts-node": "^10.0.0"
