--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.3.3",
     "chia-client": "git+https://github.com/martin-key/chia-client#master",
     "cors": "^2.8.5",
     "jet-logger": "^1.0.6",
-    "mongoose": "^5.13.2",
+    "mongoose": "^5.13.3",
     "nodemon": "^2.0.9",
     "tsc": "^2.0.3",
     "typescript": "^4.3.2"
