--- a/src/env/development.env
+++ b/src/env/development.env
@@ -2,6 +2,12 @@
 PORT=3000
 HOST=localhost
 
+## Database ##
+DB_HOST=localhost
+DB_NAME=chaingreen
+DB_USER=
+DB_PASS=
+
 ## Logger ##
 JET_LOGGER_MODE=CONSOLE
 JET_LOGGER_FILEPATH=jet-logger.log
