--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^16.3.3",
     "chia-client": "git+https://github.com/martin-key/chia-client#master",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "jet-logger": "^1.0.6",
     "mongoose": "^5.13.3",
     "nodemon": "^2.0.9",
@@ -29,6 +30,7 @@
     "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "chia-utils": "^1.0.5",
     "dotenv": "^10.0.0",
