--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "chia-client-install":"cd ./node_modules/chia-client && npm run build",
     "devServer": "nodemon ./src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc --p ./"
@@ -18,9 +19,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.12",
-    "@types/mongoose": "^5.11.97",
+    "@types/cron": "^1.7.3",
     "@types/node": "^16.3.3",
     "chia-client": "git+https://github.com/martin-key/chia-client#master",
+    "chia-utils": "git+https://github.com/ValeriD/chia-utils#fix_for",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "jet-logger": "^1.0.6",
@@ -32,7 +34,6 @@
   "devDependencies": {
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
-    "chia-utils": "^1.0.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "ts-node": "^10.0.0"
