Added full node environment variables

--- a/src/env/development.env
+++ b/src/env/development.env
@@ -2,6 +2,10 @@
 PORT=3000
 HOST=localhost
 
+##FullNode
+FULLNODE_PORT=8855
+FULLNODE_HOST=localhost
+
 ## Database ##
 DB_HOST=localhost
 DB_NAME=chaingreen
