Finished the dockerization

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,4 +3,5 @@ services:
   chaingreen-explorer-server:
     build: 
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile.prod
+    
