--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,50 @@
 version: "3.7"
 services:
   chaingreen-explorer-server:
-    container_name: chaingreen-explorer-server
-    volumes: 
-      - conf:/root/.chaingreen/
-      - cert:/etc/ca-certificates/
+    volumes:
+      - /home/valeri/.chaingreen/:/root/.chaingreen
+    network_mode: "host"
     environment:
-      - HOST=chaingreen-explorer-server
-      - PORT=3000
-      - FULLNODE_PORT=8744
-      - FULLNODE_HOST=chaingreen
-      - FULLNODE_CERTPATH=/etc/ca-certificates/chaingreen_ca.crt
-      - FULLNODE_KEYPATH=/etc/ca-certificates/chaingreen_ca.key
-    networks:
-      - chaingreen-net
-  chaingreen:
-    image: chaingreen/chaingreen
-    volumes: 
-      - conf:/root/.chaingreen/
-      - cert:/chaingreen-blockchain/chaingreen/ssl/
-    networks:
-      - chaingreen-net
-networks:
-  chaingreen-net:
-    driver: bridge
-volumes:
-  conf:
-  cert:
+
+      ## Server's params ##
+     
+      - HOST=chaingreen-explorer-server  #Server's IP
+      
+      - PORT=3000 #Server's port
+      
+      ## FullNode parameters ##
+      
+      - FULLNODE_PORT=8855 #FullNode port
+      
+      - FULLNODE_HOST=localhost #FullNode's host address
+
+      # FullNode's certificate and key
+      - FULLNODE_CERTPATH=/root/.chaingreen/mainnet/config/ssl/full_node/private_full_node.crt
+      - FULLNODE_KEYPATH=/root/.chaingreen/mainnet/config/ssl/full_node/private_full_node.key  
+      
+      ## Database parameters ##
+
+      - DB_USER=valerid # Database user's username
+      
+      - DB_PASS=mypassword # Database user's password
+
+      - DB_NAME=chaingreen # Database's name
+      
+      - DB_HOST=localhost # Database's host IP
+      
+      - DB_PORT=27017 # Database's port
+ 
+    depends_on: ## Containers that must be loaded before the server
+      - mongo
+  
+  mongo:
+    image: mongo:latest # Loading the latest mongo 
+    network_mode: "host"
+    volumes:
+      - mongo-db:/data/db # Named volume for saving the data of the database
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=valerid # Username for the root user
+      - MONGO_INITDB_ROOT_PASSWORD=mypassword # Password for the root user
+   
+volumes: ## Declaring the named volumes
+  mongo-db:
