--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "chia-client-install":"cd ./node_modules/chia-client && npm run build",
     "devServer": "nodemon ./src/index.ts",
-    "start": "node dist/index.js",
+    "start": "sudo node dist/index.js",
     "build": "tsc --p ./"
   },
   "nodemonConfig": {
@@ -29,13 +29,13 @@
     "mongoose": "^5.13.3",
     "nodemon": "^2.0.9",
     "tsc": "^2.0.3",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
     "ts-node": "^10.0.0"
   }
 }
