--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -9,12 +9,34 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+  build_and_test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: npm install, build
+        run: |
+          npm install
+          npm run chia-client-install
+          npm run build --if-present
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist-without-markdown
+          path: |
+            dist
+            !dist/**/*.md
   build-and-push-image:
     runs-on: ubuntu-latest
     name: Docker Build, Tag, Push
     steps:
     - name: Checkout
       uses: actions/checkout@v1
+    - name: Download built artifacts
+      uses: actions/download-artifact@main
+      with:
+        name: webpack artifacts
+        path: public
     - name: Build container image
       uses: docker/build-push-action@v1
       with:
