--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -36,8 +36,10 @@ jobs:
     - name: Download built artifacts
       uses: actions/download-artifact@main
       with:
-        name: webpack artifacts
-        path: public
+        name: dist-without-markdown
+        path: |
+            dist
+            !dist/**/*.md
     - name: Build container image
       uses: docker/build-push-action@v1
       with:
